test/lexer/error/err_06_unclosed_comment_pascal.pl0
program unclosed_pascal;
{ This comment never ends
begin
end
